FEAT: udpate SWAGGER
