# routes/groups.js
@@ -3,6 +3,7 @@ const router = express.Router();
 const db = require("../src/knex.js");
 
 router.get("/", async (req, res) => {
+  // #swagger.tags = ["Groups"]
   try {
     const groups = await db("groups").select("*").timout(1500);
     res.send(groups).status(200);
